[package]
name = "ensu-desktop"
version = "0.1.17-beta"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = [ "dialog-save", "dialog-open", "path-all", "fs-all", "shell-open", "process-relaunch"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ensu-db.workspace = true
ensu-sync.workspace = true
ente-core = { workspace = true, features = ["srp"] }
inference_rs.workspace = true
uuid = { version = "1", features = ["v4"] }
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_SystemInformation"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
updater = ["tauri/updater"]
