[package]
name = "ensu-desktop"
version = "0.1.18-beta"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ensu-db.workspace = true
ensu-sync.workspace = true
ente-core = { workspace = true, features = ["srp"] }
inference_rs.workspace = true
uuid = { version = "1", features = ["v4"] }
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_SystemInformation"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
