[package]
name = "ente_rust"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
ente-core = { path = "../../../crates/core" }
ente-contacts = { path = "../../../crates/contacts" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
missing_docs = "warn"
